levantar en docker

--- a/.env
+++ b/.env
@@ -2,9 +2,13 @@ DB_HOST=localhost
 
 DB_USER=root
 
+DB_PASSWORD_ROOT=1234
+
 DB_PASSWORD=12345
 
 DB_NAME=ordinario_modelo_admin
 
-DB_PORT=3306
+DB_PORT=33065
+
+NODE_PORT=300
 
